<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHeadQuestionThreePageSetFirstParam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/headline_question_three_page_set_first_param"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClickAnswerYes"
                android:padding="10dp"
                android:text="@string/answer_yes"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClickAnswerNo"
                android:padding="10dp"
                android:text="@string/answer_no"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>