<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHeadTypeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/headline_type_card"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spTypeCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:fontFamily="@font/ubuntu_medium"
            android:inputType="number"
            android:padding="15dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvHeadNameBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/headline_name_bank"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNameBank"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:fontFamily="@font/ubuntu_medium"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvHeadNumCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/headline_num_card"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNumCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border"
            android:fontFamily="@font/ubuntu_medium"
            android:inputType="number"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickContinue"
            android:padding="10dp"
            android:text="@string/bt_continue"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>