<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--<include-->
        <!--layout="@layout/toolbar" />-->

    <!--expense (расходы)-->

    <LinearLayout
        android:id="@+id/layout_headline_expenses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headline_expenses"
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="3dp"
            android:paddingBottom="5dp"
            android:text="@string/headline_expenses"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_add_expenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_add"
            android:onClick="onClickAddExpense"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_expenses_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_expenses_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_total"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenses_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailTotalExpense"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_expenses_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_expenses_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_month"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenses_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailMonthExpense"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_expenses_week"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_expenses_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_week"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenses_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailWeekExpense"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_expenses_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_expenses_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_day"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expenses_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailDayExpense"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <!--income (доходы)-->

    <LinearLayout
        android:id="@+id/layout_headline_income"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headline_income"
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            android:text="@string/headline_income"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_add_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_add"
            android:onClick="onClickAddIncome" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_income_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_income_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_total"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/income_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailTotalIncome"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_income_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_income_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_month"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/income_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailMonthIncome"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_income_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_income_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_week"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/income_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailWeekIncome"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_income_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_income_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_day"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/income_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:onClick="onClickDetailDayIncome"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <!--balance (баланс)-->

    <LinearLayout
        android:id="@+id/layout_headline_balance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headline_balance"
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="2dp"
            android:paddingTop="5dp"
            android:paddingEnd="3dp"
            android:paddingBottom="5dp"
            android:text="@string/headline_balance"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_balance_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_balance_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_total"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balance_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_balance_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_balance_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_month"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balance_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_balance_week"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_balance_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_week"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balance_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_balance_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/headline_balance_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/headline_day"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balance_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

</LinearLayout>
